--- a/#src/pug/partials/section-hello.pug
+++ b/#src/pug/partials/section-hello.pug
@@ -27,10 +27,10 @@
 				._title.
 					Я > Front-end разработчик
 			._text 
-				p /* В данный момент являюсь частным предпринимателем, но хотел бы координально поменять свой род деятельности. */
+				p /* В данный момент я являюсь частным предпринимателем, но хотел бы кардинально изменить свой род деятельности. */
 				p /* С момента появления 
 					span Интернета 
-					| занимаюсь версткой на уровне сильного увлечения. Я хочу взять на себя больше работы и повысить свои навыки веб-разработчика. */
+					| я занимаюсь версткой на уровне сильного увлечения. Я хочу взять на себя больше работы и повысить свои навыки веб-разработчика. */
 
 			._footer
 				._link 
