--- a/#src/pug/modules/breadcrumbs.pug
+++ b/#src/pug/modules/breadcrumbs.pug
@@ -1,10 +1,10 @@
 nav.breadcrumbs 
   ul._list 
     li._item
-      a(href="")._link _scills
+      a(href="#scills")._link Scills
     li._item
       .icon-angle-right
-      a(href="")._link _scills
+      a(href="#web")._link Web Development 
     li._item
       .icon-angle-right
-      a(href="")._link _scills
+      a(href="#experience")._link Experience
