--- a/#src/pug/partials/section-project.pug
+++ b/#src/pug/partials/section-project.pug
@@ -1,4 +1,142 @@
-.project-page.el-anime(data-x='170')
-	._column 
-		h1._title Секция PROJECT
-	._column 
+.project-page.el-anime 
+	._row
+		.page-project._column 
+			._image 
+				img(src="@@webRoot/img/project/project-1.png", alt="project-1")
+				span
+					+iconfont("html-five")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/coronaWebsite/build/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-2.png", alt="project-1")
+				span
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("gulp")
+				._text 
+						| Веб-сайт финансовой организации
+				._button 
+					a(href="https://dennchik.github.io/Relvise/build/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
+		.page-project._column 
+			._image
+				img(src="@@webRoot/img/project/project-3.png", alt="project-1")
+				span 
+					+iconfont("css3")
+					+iconfont("javascript")
+					+iconfont("react")
+					+iconfont("gulp")
+				._text 
+					| Сайт интернет магазина “шаблон”
+				._button 
+					a(href="https://dennchik.github.io/Clear-fit/public/" target="_blank") view-project 
