--- a/#src/pug/partials/side-bar.pug
+++ b/#src/pug/partials/side-bar.pug
@@ -18,48 +18,48 @@
 							+iconfont('angles-right-solid')
 							span Projects 
 						._sub-menu
-							._item 
+							._item
 								.submenu-child 
-									._title
-										a(target="_blank" href="http://dennchik.github.io/coronaWebsite/build/")._link coronaWebsite 
+									._title coronaWebsite 
+										+iconfont('tab') 
+									._items-child 
+										a(target="_blank" href="http://dennchik.github.io/coronaWebsite/build/")._link  
+											+iconfont('arrow-right') 
 											span &nbsp;(
 												+iconfont('git-hub')
-												| Git-page)
-										+iconfont('tab') 
-									._item 
+												| Git-page) 
 										a(target="_blank" href="http://github.com/Dennchik/coronaWebsite")._link 
-											+iconfont('arrow-right')
-											| coronaWebsite
+											+iconfont('arrow-right') 
 											span &nbsp;(
 												+iconfont('git-hub')
 												| Git-rep...) 
 							._item 
 								.submenu-child 
-									._title
-										a(target="_blank" href="http://dennchik.github.io/Relvise/build/")._link Relvise 
-											span &nbsp;(
-												+iconfont('git-hub')
-												| Git-page)
+									._title Relvise 
 										+iconfont('tab')
-									._item 
-										a(target="_blank" href="http://github.com/Dennchik/Relvise")._link 
-											+iconfont('arrow-right')
-											| Relvise
-											span &nbsp;(
-												+iconfont('git-hub')
-												| Git-rep...) 
-							._item 
-								.submenu-child 
-									._title
-										a(target="_blank" href="http://dennchik.github.io/Clear-fit/public/")._link Clear-fit 
+									._items-child  
+										a(target="_blank" href="http://dennchik.github.io/Relvise/build/")._link  
+											+iconfont('arrow-right') 
 											span &nbsp;(
 												+iconfont('git-hub')
 												| Git-page)
-										+iconfont('tab') 
-									._item 
+										a(target="_blank" href="http://github.com/Dennchik/Relvise")._link 
+											+iconfont('arrow-right') 
+											span &nbsp;(
+												+iconfont('git-hub')
+												| Git-rep...) 
+							._item
+								.submenu-child 
+									._title Clear-fit 
+										+iconfont('tab')
+									._items-child 
+										a(target="_blank" href="http://dennchik.github.io/Clear-fit/public/")._link  
+											+iconfont('arrow-right') 
+											span &nbsp;(
+												+iconfont('git-hub')
+												| Git-page)
 										a(target="_blank" href="http://github.com/Dennchik/Clear-fit")._link 
-											+iconfont('arrow-right')
-											| coronaWebsite
+											+iconfont('arrow-right') 
 											span &nbsp;(
 												+iconfont('git-hub')
 												| Git-rep...) 
