--- a/#src/scss/pages/page.scss
+++ b/#src/scss/pages/page.scss
@@ -25,11 +25,6 @@
 			opacity: 1;
 			transition: opacity 0.8s ease-in-out 0.8s;
 		}
-
-		// .side-bar {
-		// 	opacity: 1;
-		// 	transition: opacity 0.5s ease-in-out 0.5s;
-		// }
 	}
 }
 
@@ -46,18 +41,20 @@
 	&__desktop {
 		overflow: hidden;
 		position: relative;
-		height: 74rem;
 		display: flex;
 		flex-direction: column;
 		border-radius: 0.7rem;
+		height: 100vh;
+		@include _min-690 {
+			max-height: 74rem;
+		}
 		@include _690 {
-			min-height: calc(100vh - 2.2rem);
+			height: calc(100vh - 2.2rem);
 		}
 	}
 
 	// .page__header
 	&__header {
-		height: calc($headerHeight * 2);
 		z-index: 8;
 		transform: translate(0, -100%);
 	}
@@ -121,22 +118,6 @@
 		transition-property: transform, opacity;
 		transition-duration: 0.5s;
 		transition-delay: 0.7s, 0.1s;
-
-		// &._active {
-		//
-		// 	.hello-page {
-		// 		// animation: rotateIn 0.9s ease;
-		// 		left: 0;
-		// 	}
-		// 	.scills-page {
-		// 		// animation: rotateIn 0.9s ease;
-		// 		left: 0;
-		// 	}
-		// 	.project-page {
-		// 		// animation: rotateIn 0.9s ease;
-		// 		left: 0;
-		// 	}
-		// }
 	}
 
 	// .editor__terminal
@@ -148,15 +129,3 @@
 		height: 100%;
 	}
 }
-
-// @keyframes rotateIn {
-// 	from {
-// 		opacity: 0;
-// 		rotate: -180deg;
-// 	}
-
-// 	to {
-// 		opacity: 1;
-// 		rotate: 0;
-// 	}
-// }
