--- a/#src/scss/section/side-bar.scss
+++ b/#src/scss/section/side-bar.scss
@@ -1,7 +1,6 @@
 .side-bar {
 	height: 100%;
 	display: flex;
-	// opacity: 0;
 
 	// .side-bar__active-bar
 	&__active-bar {
@@ -32,7 +31,6 @@
 		position: absolute;
 		z-index: 3;
 		border: 1px solid var(--border-color);
-		width: auto;
 		width: 0;
 		height: 100%;
 		overflow: hidden;
@@ -80,6 +78,7 @@
 		display: grid;
 		grid-template-rows: max-content 0fr;
 		transition: all 0.4s ease-in-out;
+		margin-bottom: 1rem;
 
 		&._open {
 			grid-template-rows: max-content 1fr;
@@ -110,16 +109,18 @@
 	&__title {
 		cursor: pointer;
 		padding-left: 0.8rem;
-		line-height: 170%;
+		line-height: 200%;
 		background-color: var(--background-selected);
 		border-radius: 0.3rem;
 		border: 1px solid var(--border-color);
 		border-style: solid none;
 		@include flex-align-center;
+		span {
+			margin-left: 1rem;
+		}
 
 		.icon-angles-right-solid {
 			scale: 1;
-			margin-right: 1rem;
 			transition: all 0.3s ease-in-out;
 			font-size: 1.2rem;
 		}
@@ -127,44 +128,21 @@
 
 	// .parent-menu__sub-menu
 	&__sub-menu {
+		border-left: 1px solid var(--border-color);
 		margin: 0 1.4rem;
 		position: relative;
-		padding-bottom: 1rem;
 		min-height: 0;
 		overflow: hidden;
-		transition: min-height 0.4s ease-in-out;
-		background: linear-gradient(to left, transparent, transparent),
-			linear-gradient(to left, var(--border-color), var(--border-color));
-		background-size:
-			100% 1px,
-			0 1px;
-		background-position:
-			100% 100%,
-			0 100%;
-		background-repeat: no-repeat;
-
-		&::before {
-			content: '';
-			width: 1px;
-			height: 100%;
-			position: absolute;
-			top: 0;
-			background: linear-gradient(
-				to bottom,
-				var(--border-color),
-				var(--border-color)
-			);
-			background-position: center;
-			background-size: 1px calc(100% - 0.5rem);
-			background-repeat: no-repeat;
-		}
 	}
 
 	// .parent-menu__item
 	&__item {
-		gap: 2rem;
 		display: grid;
 		margin: 0.5rem 0;
+
+		&:last-child {
+			margin-bottom: 0;
+		}
 	}
 
 	// .parent-menu__link
@@ -207,7 +185,7 @@
 
 	&._open {
 		grid-template-rows: max-content 1fr;
-		.submenu-child__item {
+		.submenu-child__items {
 			background-size:
 				0 1px,
 				calc(95% - 0px) 1px;
@@ -216,21 +194,40 @@
 			transition-duration: 0.3s;
 			transition-delay: 0.4s;
 		}
+		.icon-tab {
+			margin: 0 1rem;
+			transform: rotate(450deg);
+		}
 	}
 
 	// .submenu-child__title
 	&__title {
-		gap: 1rem;
+		cursor: pointer;
+		padding-left: 1rem;
+		line-height: 200%;
+		border: 1px solid transparent;
 		@include flex-align-center;
+		justify-content: space-between;
+
+		.icon-tab {
+			transition: transform 0.4s ease-in-out;
+			margin: 0 1rem;
+		}
+
+		&:hover {
+			color: var(--font-color-active);
+			background: var(--background-selected);
+			border: 1px solid var(--border-color);
+		}
 	}
 
-	// .submenu-child__item
-	&__item {
+	// .submenu-child__items
+	&__items {
 		margin: 0 1.4rem;
 		position: relative;
 		min-height: 0;
 		overflow: hidden;
-		transition: min-height 0.4s ease-in-out;
+
 		background: linear-gradient(to left, transparent, transparent),
 			linear-gradient(to left, var(--border-color), var(--border-color));
 		background-size:
@@ -240,30 +237,21 @@
 			100% 100%,
 			0 100%;
 		background-repeat: no-repeat;
-
-		&::before {
-			content: '';
-			width: 1px;
-			height: 100%;
-			position: absolute;
-			top: 0;
-			background: linear-gradient(
-				to bottom,
-				var(--border-color),
-				var(--border-color)
-			);
-			background-position: center;
-			background-size: 1px calc(100% - 0.5rem);
-			background-repeat: no-repeat;
-		}
-
-		gap: 2rem;
+		gap: 0.5rem;
 		@include flex-align-center;
+	}
+
+	// .submenu-child__items-child
+	&__items-child {
+		border-left: 1px solid var(--border-color);
+		flex-direction: column;
+		@extend .submenu-child__items;
 	}
 
 	// .submenu-child__link
 	&__link {
 		padding-left: 1rem;
+		margin-left: -1.4rem;
 		line-height: 200%;
 		width: 95%;
 		border: 1px solid transparent;
@@ -280,10 +268,6 @@
 
 		.icon-arrow-right {
 			margin-right: 1rem;
-		}
-
-		.icon-tab {
-			margin-left: 1rem;
 		}
 
 		&:hover {
