--- a/#src/pug/partials/section-hello.pug
+++ b/#src/pug/partials/section-hello.pug
@@ -1,29 +1,49 @@
-.hello-page.el-anime(data-x='170')
+.hello-page.el-anime 
 	._column 
 		._row
 			._header
 				._privet 
 					p Всем Привет!
 					p Меня зовут:
-				h1._my-name
-					span A
-					span л
-					span е
-					span к 
-					span с
-					span а 
-					span н 
-					span д 
-					span р
-					div
-					span В
-					span а
-					span с
-					span и 
-					span л
-					span ь 
-					span е 
-					span в 
+				._content-grid 
+					._my-name
+						span.el A
+						span.el л
+						span.el е
+						span.el к
+						span.el с
+						span.el а
+						span.el н
+						span.el д
+						span.el р
+						div
+						span.el В
+						span.el а
+						span.el с
+						span.el и
+						span.el л
+						span.el ь
+						span.el е
+						span.el в
+					._my-name._shadow
+						span.el A
+						span.el л
+						span.el е
+						span.el к
+						span.el с
+						span.el а
+						span.el н
+						span.el д
+						span.el р 
+						div
+						span.el В
+						span.el а
+						span.el с
+						span.el и
+						span.el л
+						span.el ь
+						span.el е
+						span.el в
 				._title.
 					Я > Front-end разработчик
 			._text 
