--- a/#src/pug/partials/section-scills.pug
+++ b/#src/pug/partials/section-scills.pug
@@ -14,18 +14,18 @@
 				span График работы: 
 				| полный день, удаленная работа
 		._row
-			h1._title Skills 
+			h1._title#scills Skills 
 			p Меня вдохновляет создание замечательной работы с людьми, которые так же, как и я, увлечены созданием чего-то потрясающего. 
 			p - Обучаемость. Мой девиз: каждый день что-то новое. 
 			p - Коммуникабельность: способность находить общий язык практически с любым типом людей. 
 			p - Внимание к деталям.
 			p - Способность эффективно взаимодействовать с командой, для достижения общей цели.
-			h1._title Web Development 
+			h1._title#web Web Development 
 			p._text Javascript, Node.js, Anime.js, Swiper, WebStorm. VsCode.
-			h1._title UI\UX Design 
-			p Photoshop, Illustrator, Figma, GitHub, Versal, Marsy .
 			h1._title Frontend Development
-			p HTML, PUG, CSS, LESS, SASS.
+			p HTML, PUG, CSS, SASS.
+			h1._title UI\UX Design 
+			p Photoshop, Illustrator, Figma, GitHub, Versal, Marsy.
 			h1._title Опыт (Experience):
 			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день. 
 	._column 
@@ -52,7 +52,7 @@
 				p._text Kамчатский государственный технический университет, г.Петропавловск-Камчатский. Судомеханическое отделение, Судомеханик
 				
 		._row
-			h1._title Опыт (Experience):
+			h1._title#experience Опыт (Experience):
 			table.table 
 				tbody 
 					tr 
