--- a/#src/scss/section/section-project.scss
+++ b/#src/scss/section/section-project.scss
@@ -1,29 +1,107 @@
 .project-page {
 	position: relative;
-	display: flex;
 	height: 100%;
-
-	// .scills-page __column
-	&__column {
-		height: 100%;
-		flex: 0 1 50%;
-		@include flex-align-center;
+	overflow-x: hidden;
+	&::-webkit-scrollbar {
+		width: 0;
 	}
 
 	// .scills-page __title
 	&__title {
 		color: #88c0ff;
-		height: 0;
 		font-size: 3rem;
-		transform: translate(10rem, -10rem);
+	}
 
-		span {
-			display: inline-block;
-			opacity: 0;
+	// .scills-page __row
+	&__row {
+		padding: 2rem;
+		display: grid;
+		justify-items: center;
+		row-gap: 2rem;
+		min-height: 100%;
+		max-height: 63.2rem;
+		overflow-x: hidden;
+		grid-template-columns: 1fr 1fr 1fr;
+		&::-webkit-scrollbar {
+			width: 0;
 		}
-		div {
-			display: block;
+		scrollbar-width: none;
+		@include _min-690 {
+		}
+		@include _690 {
+			grid-template-columns: 1fr;
+		}
+	}
+
+	// .scills-page__column
+	&__column {
+		border-radius: 12px 12px 0 0;
+		@include _690 {
+			&:not(:last-child) {
+				margin-bottom: 2rem;
+			}
+		}
+
+		@include _min-690 {
+			&:not(:last-child) {
+				margin-right: 2rem;
+			}
 		}
 	}
 }
-// -
+.page-project {
+	// .scills-page__image
+	&__image {
+		position: relative;
+		background: var(--background-side-bar);
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		img {
+			object-fit: cover;
+		}
+		span {
+			position: absolute;
+			top: 1rem;
+			right: 1rem;
+			display: flex;
+		}
+		.icon-javascript {
+			&::before {
+				border-radius: 5px;
+				overflow: hidden;
+			}
+		}
+
+		[class*='icon-'] {
+			font-size: 1.8rem;
+			height: auto;
+			color: var(--selected-color);
+			&:not(:last-child) {
+				margin-right: 0.5rem;
+			}
+		}
+	}
+
+	// .scills-page__text
+	&__text {
+		flex: 1 1 100%;
+		padding: 0 1rem;
+		line-height: 200%;
+		margin-bottom: 1px;
+	}
+
+	// .scills-page__button
+	&__button {
+		padding-left: 1rem;
+		display: flex;
+		margin-bottom: 1rem;
+		a {
+			line-height: 200%;
+			padding: 0 1rem;
+			border-radius: 4px;
+			background-color: var(--background-selected);
+			box-shadow: 0px 0px 3px $boxShadowSecond;
+		}
+	}
+}
