--- a/#src/pug/partials/section-hello.pug
+++ b/#src/pug/partials/section-hello.pug
@@ -26,24 +26,24 @@
 						span.el е
 						span.el в
 					._my-name._shadow
-						span.el A
-						span.el л
-						span.el е
-						span.el к
-						span.el с
-						span.el а
-						span.el н
-						span.el д
-						span.el р 
+						span A
+						span л
+						span е
+						span к
+						span с
+						span а
+						span н
+						span д
+						span р 
 						div
-						span.el В
-						span.el а
-						span.el с
-						span.el и
-						span.el л
-						span.el ь
-						span.el е
-						span.el в
+						span В
+						span а
+						span с
+						span и
+						span л
+						span ь
+						span е
+						span в
 				._title.
 					Я > Front-end разработчик
 			._text 
