--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -74,3 +74,4 @@
 @import 'section/section-aboute';
 @import 'section/section-terminal';
 @import 'section/section-swiper';
+@import 'section/section-modal';
