--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -11,14 +11,14 @@ block side-bar
 
 block editor
 	.editor
-		section._section
+		section._section._active 
 			.bgblurs-box
 				+svg('green-shadow','bg-blurs', 'bgblurs-box__top')
 				+svg('blue-shadow','bg-blurs','bgblurs-box__bottom')
 			include ../partials/section-hello
 		section._section
 			include ../partials/section-scills
-		section._section._active 
+		section._section
 			include ../partials/section-project 
 		include ../partials/section-terminal
 block move-content 
@@ -26,7 +26,4 @@ block move-content
 block footer 
 	include ../layout/footer
 block modal 
-	.modal 
-		span 
-			+iconfont('cancel-circle')
-		img(src="#" id="image")._image
+	include ../partials/section-modal
