--- a/#src/pug/partials/swiper.pug
+++ b/#src/pug/partials/swiper.pug
@@ -2,33 +2,49 @@
   ._body._swiper 
     ._slide()
       .content-mainslide._content
+        ._invisible 
+          a(href="#")._link 
         ._image
           img(src="@@webRoot/img/main/screen-4.png" alt="image") 
     ._slide
       .content-mainslide._content 
+        ._invisible 
+          a(href="https://dennchik.github.io/Relvise/build/")._link 
         ._image
           img(src="@@webRoot/img/main/screen-3.png" alt="image") 
     ._slide 
       .content-mainslide._content
+        ._invisible 
+          a(href="https://dennchik.github.io/coronaWebsite/build/")._link  
         ._image
           img(src="@@webRoot/img/main/screen-2.png" alt="image") 
     ._slide 
       .content-mainslide._content
+        ._invisible 
+          a(href="https://dennchik.github.io/Clear-fit/public/")._link 
         ._image
           img(src="@@webRoot/img/main/screen-1.png" alt="image") 
     ._slide
       .content-mainslide._content
+        ._invisible 
+          a(href="#")._link 
         ._image
           img(src="@@webRoot/img/main/screen-4.png" alt="image") 
     ._slide
       .content-mainslide._content
+        ._invisible 
+          a(href="https://dennchik.github.io/Relvise/build/")._link 
         ._image
           img(src="@@webRoot/img/main/screen-3.png" alt="image") 
     ._slide
       .content-mainslide._content
+        ._invisible 
+          a(href="https://dennchik.github.io/coronaWebsite/build/")._link  
         ._image
           img(src="@@webRoot/img/main/screen-2.png" alt="image") 
     ._slide
       .content-mainslide._content
+        ._invisible 
+          a(href="https://dennchik.github.io/Clear-fit/public/")._link 
         ._image
           img(src="@@webRoot/img/main/screen-1.png" alt="image") 
