--- a/#src/scss/layout/bem-block.scss
+++ b/#src/scss/layout/bem-block.scss
@@ -31,8 +31,8 @@
 		width: 40rem;
 		height: 44.2rem;
 		transform: rotate(-94.305deg);
-		fill: #43d9ad;
-		opacity: 0.7;
+		fill: #00717e;
+		opacity: 0.5;
 		filter: blur(87px);
 
 		@include _min-690 {
