--- a/#src/scss/layout/footer.scss
+++ b/#src/scss/layout/footer.scss
@@ -34,7 +34,7 @@
 		padding-left: 1.5rem;
 		font-size: 1.8rem;
 		&:hover {
-			color: var(--font-color-not-active);
+			color: var(--font-color-active);
 		}
 	}
 }
