--- a/#src/scss/pages/main-content.scss
+++ b/#src/scss/pages/main-content.scss
@@ -23,6 +23,9 @@
 		z-index: 2;
 		overflow: hidden;
 		max-height: calc(100vh - 12.6rem);
+		@include _min-690 {
+			max-height: calc(100vh - 10.6rem);
+		}
 	}
 }
 // -----------------------------------------------------------------------------
