--- a/#src/scss/section/section-project.scss
+++ b/#src/scss/section/section-project.scss
@@ -17,9 +17,7 @@
 		padding: 2rem;
 		display: grid;
 		justify-items: center;
-		row-gap: 2rem;
-		min-height: 100%;
-		max-height: 63.2rem;
+		gap: 2rem;
 		overflow-x: hidden;
 		grid-template-columns: 1fr 1fr 1fr;
 		&::-webkit-scrollbar {
@@ -27,6 +25,7 @@
 		}
 		scrollbar-width: none;
 		@include _min-690 {
+			max-height: 63.2rem;
 		}
 		@include _690 {
 			grid-template-columns: 1fr;
@@ -35,37 +34,42 @@
 
 	// .scills-page__column
 	&__column {
-		border-radius: 12px 12px 0 0;
-		@include _690 {
-			&:not(:last-child) {
-				margin-bottom: 2rem;
-			}
-		}
+		display: flex;
+		border-radius: 16px 16px 0 0;
+		height: min-content;
+		overflow: hidden;
+		transition: box-shadow 0.5s ease-in-out;
 
-		@include _min-690 {
-			&:not(:last-child) {
-				margin-right: 2rem;
+		&:hover {
+			box-shadow: 0px 1px 7px $boxShadowSecond;
+			img {
+				scale: 1.6;
 			}
 		}
 	}
 }
+
 .page-project {
 	// .scills-page__image
 	&__image {
+		cursor: pointer;
 		position: relative;
 		background: var(--background-side-bar);
-		height: 100%;
 		display: flex;
 		flex-direction: column;
+
 		img {
+			transition: scale 0.5s ease-in-out;
 			object-fit: cover;
 		}
+
 		span {
 			position: absolute;
 			top: 1rem;
 			right: 1rem;
 			display: flex;
 		}
+
 		.icon-javascript {
 			&::before {
 				border-radius: 5px;
@@ -86,9 +90,9 @@
 	// .scills-page__text
 	&__text {
 		flex: 1 1 100%;
-		padding: 0 1rem;
+		padding: 1rem;
 		line-height: 200%;
-		margin-bottom: 1px;
+		margin-bottom: 0.5rem;
 	}
 
 	// .scills-page__button
@@ -102,6 +106,10 @@
 			border-radius: 4px;
 			background-color: var(--background-selected);
 			box-shadow: 0px 0px 3px $boxShadowSecond;
+			&:hover,
+			&:active {
+				box-shadow: 0px 0px 1px $boxShadowSecond;
+			}
 		}
 	}
 }
